force-app/main/default/objects/SOW__c/SOW__c.object-meta.xml
<CustomObject>
    <label>SOW</label>
    <nameField>
        <displayFormat>SOW-{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SOW</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>