force-app/main/default/objects/SOW__c/fields/Days_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Days_Invoiced__c</fullName>
    <label>Days Invoiced</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>