force-app/main/default/objects/SOW__c/fields/Days_Not_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Days_Not_Scheduled__c</fullName>
    <label>Days Not Scheduled</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>