force-app/main/default/objects/SOW__c/fields/GoLiveDate__c.field-meta.xml
<CustomField>
    <fullName>GoLiveDate__c</fullName>
    <label>Go-Live Date</label>
    <type>Date</type>
</CustomField>