force-app/main/default/objects/SOW__c/fields/Integration_Id__c.field-meta.xml
<CustomField>
    <fullName>Integration_Id__c</fullName>
    <externalId>true</externalId>
    <label>Integration Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>