force-app/main/default/objects/SOW__c/fields/Total_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoiced__c</fullName>
    <description>Days Invoiced by Daily Rate</description>
    <formula>Days_Invoiced__c *  Daily_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days Invoiced * Daily Rate</inlineHelpText>
    <label>Total Invoiced</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>