force-app/main/default/objects/SOW__c/fields/Total_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Total_Ordered__c</fullName>
    <description>Formula of Days Ordered by Daily Rate</description>
    <formula>Days_Ordered__c *  Daily_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days Ordered * Daily Rate</inlineHelpText>
    <label>Total Ordered</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>